[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Card.gd" type="Script" id=1]

[node name="Card" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -974.0
margin_bottom = -520.0
rect_pivot_offset = Vector2( 0, 80 )
script = ExtResource( 1 )

[node name="CardBase" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 80.0

[node name="ShadeRect" type="ColorRect" parent="."]
visible = false
margin_right = 50.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 0.266667 )

[connection signal="gui_input" from="CardBase" to="." method="_on_CardBase_gui_input"]
